<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/switch_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lockcalls" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/prefix_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_prefix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/prefix"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/etxt_prefix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:hint="@string/prefix"
            android:inputType="number"
            android:maxLength="4" />

        <Button
            android:id="@+id/btn_change_prefix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/enter_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etxt_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:hint="@string/number"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_contacts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contacts" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call" />

</LinearLayout>